--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -147,7 +147,8 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"></section>
+    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>All posts on vTank represent my own opinion based in experiences I have made. It does not represent VMware´s opinions, positions and strategies.</p>
+</section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
     </section>
