--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
     <main class="pb7" role="main">
       
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-    <p>Welcome to my blog about my work and my experiences in virtualization.</p>
+    <p>Welcome to my blog about my work and my experiences in virtualization. Bla Bla</p>
 
   </article>
   
