--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          Memory in the homelab. A topic that probably employs everyone. Most of the CPU resources are sufficient, but memory is usually not enough there. My colleague William Lam has tested in his blog the new 32GB Memory Dimms in his Intel NUCs. Unfortunately, William has no generation 7 NUCs. So I thought, take the 300 Euros and test it yourself in your area. I ordered the new dimms here. The installation was super easy and after 10 minutes the new memory was installed.
+          Memory in the homelab. A topic that probably hits everyone. Most of the time CPU resources are sufficient, but memory is usually a bottleneck. My colleague William Lam has tested the new 32GB Dimms in his Intel NUCs. Link. Unfortunately, William has no generation 7 NUCs. So I thought, take the 300 Euros and test it yourself in your environment. I ordered the new dimms here. The installation was super easy and after 10 minutes the new memory was installed.
         </div>
           <a href="/posts/64gb_intel_nuc7i3/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
         
