--- a/about/index.html
+++ b/about/index.html
@@ -173,6 +173,8 @@ My carrier at VMware started in early 2016 as a Technical Account Manager in the
 
 <p>In all these years I have been able to gain great experience in planning, managing and strategic guidance, which I pass on to customers and companies today.</p>
 
+<p><img src="/images/vmware_cert_VCPDCV2019.png" style="width:300px;height:300px;></img></p>
+
       </div>
     </article>
   </div>
